--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.11.5",
     "remark-code-extra": "^1.0.1",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
